--- a/.mkdocs/override/main.html
+++ b/.mkdocs/override/main.html
@@ -3,10 +3,8 @@
 {% block extrahead %}
     {% if page and page.meta and page.meta.og_title %}
         <meta property="og:title" content="{{ page.meta.og_title }}" />
-        <meta property="twitter:title" content="{{ page.meta.title }}" />
     {% elif page and page.meta and page.meta.title %}
         <meta property="og:title" content="{{ page.meta.title }}" />
-        <meta property="twitter:title" content="{{ page.meta.title }}" />
     {% endif %}
 
     {% if page and page.meta and page.meta.og_type %}
@@ -33,12 +31,9 @@
 
     {% if page and page.meta and page.meta.description %}
         <meta property="og:description" content="{{ page.meta.description }}">
-        <meta property="twitter:description" content="{{ page.meta.title }}" />
     {% elif config.site_description %}
-        <meta property="og:description" content="{{ config.site_description }}">
-        <meta property="twitter:description" content="{{ page.meta.title }}" />
+        <meta property="og:description" content="{{ config.site_description }}"
     {% endif %}
 
-	<meta property="twitter:card" content="summary" />
 	<meta property="og:locale" content="ja-JP" />
 {% endblock %}
